--- a/Main Branch Code/jenkinsfile
+++ b/Main Branch Code/jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
                             git checkout master
                             git reset --hard origin/master
 
-                            sed -i 's|image:.*|image: ${IMAGE_NAME}:${IMAGE_TAG}|' k8s/deployment.yml
+                            sed -i 's|^\\(\\s*image:\\).*|\\1 ${IMAGE_NAME}:${IMAGE_TAG}|' k8s/deployment.yml
 
                             git add k8s/deployment.yml
                             git diff --cached --quiet || git commit -m "Update image to ${IMAGE_TAG}"
