--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: move-app-Service
+  namespace: default
 spec:
   type: LoadBalancer
   selector:
     app: movie-app
   ports:
-  - port: 80
-    targetPort: 5000
-      
+    - port: 80
+      targetPort: 5000
