--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: move-app-Service
+  name: move-app-service
   namespace: default
 spec:
   type: LoadBalancer
